--- a/style.css
+++ b/style.css
@@ -120,8 +120,13 @@ body {
     border:0px;
     background-color: #0A155A;
 }
+
 .fa-trash {
     color: red;
+}
+
+.fa-pencil-square-o {
+    color: whitesmoke;
 }
 
 .bottom-plus {
